auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  ports:
  - port: 8000
    name: http
    targetPort: 8000
  selector:
    app: auth
