auth/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: searchengine
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
  - http:
      paths:
      - path: /searchengine/auth/callback
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8000
